# dune-test

./: .gitignore  README.md  cloneAll.sh  compileAlberta.sh  compileAluGrid.sh  compileDune.sh  compileTest.sh
dune-test/: CMakeLists.txt  Makefile.am  README  config.h.cmake  configure.ac  dune-copasi.pc.in  dune.module
dune-test/cmake/modules/: CMakeLists.txt  Makefile.am
dune-test/doc/: Makefile.am
dune-test/doc/doxygen/: Doxylocal  Makefile.am
dune-test/dune/: Makefile.am
dune-test/dune/copasi/: Makefile.am
dune-test/dune/copasi/utilities/: CMakeLists.txt  Makefile.am  componentparameters.hh  datahelper.hh  mdpvdwriter.hh  newton.hh  newtonutilities.hh  pvdwriter.hh  sbmlhelper.hh  solutioncontrol.hh  solutiontimeoutput.hh  timemanager.hh
dune-test/dune/test/: CMakeLists.txt  Makefile.am  test.hh
dune-test/m4/: CMakeLists.txt  Makefile.am  dune-test.m4
dune-test/src/: CMakeLists.txt  Makefile.am  dune_test.conf  local_operator.hh  newtonutilities.hh  pvdwriter.hh  timemanager.hh  turing.cc  turing_initial.hh
dune-test/src/fish_ccfv/: CMakeLists.txt  Makefile.am  ccfv_local_operator.hh  componentparameters.hh  fish_ccfv.cc  fish_ccfv.conf  fish_waves.conf  initial_conditions.h  reactionadapter.h
dune-test/src/pnas_fish/: CMakeLists.txt  Makefile.am  componentparameters.hh  initial_conditions.hh  local_operator.hh  pnas_fish.cc  pnas_fish.conf  reactionadapter.hh
dune-test/src/turing_circle/: CMakeLists.txt  componentparameters.hh  local_operator.hh  proportionalflowcoupling.hh  reactionadapter.hh  turing_circle.cc  turing_circle.conf
dune-test/src/turing_current/: CMakeLists.txt  initial_conditions.hh  turing_current.cc  turing_current.conf
dune-test/src/turing_problem/: CMakeLists.txt  Makefile.am  Makefile.in  componentparameters.hh  local_operator.hh  turing.cc  turing.conf  turing_initial.hh
dune-test/src/turing_problem_ccfv/: CMakeLists.txt  Makefile  Makefile.am  ccfv_local_operator.hh  componentparameters.hh  turing_ccfv.cc  turing_ccfv.conf
dune-test/src/turing_problem_ccfv/.deps/: turing_ccfv-turing_ccfv.Po
patches/: dune_common_ignore_fortran.patch  dune_grid_cygwin.patch  dune_pdelab_missing1.patch  dune_pdelab_missing2.patch  dune_pdelab_new_cmake.patch  dune_pdelabhowto.patch
