#install headers
install(
  FILES 

     componentparameters.hh
     datahelper.hh
     mdpvdwriter.hh
     newton.hh
     newtonutilities.hh
     pvdwriter.hh
     sbmlhelper.hh
     solutioncontrol.hh
     solutiontimeoutput.hh
     timemanager.hh    

  DESTINATION include/dune/copasi/utilities)

