utilitiesdir = $(includedir)/dune/copasi/utilities

utilities_HEADERS =         \
     componentparameters.hh \
     datahelper.hh          \
     mdpvdwriter.hh         \
     newton.hh              \
     newtonutilities.hh     \
     pvdwriter.hh           \
     sbmlhelper.hh          \
     solutioncontrol.hh     \
     solutiontimeoutput.hh  \
     timemanager.hh

include $(top_srcdir)/am/global-rules

EXTRA_DIST = CMakeLists.txt
